k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-devops-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: real-devops
  template:
    metadata:
      labels:
        app: real-devops
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: app
          image: sanjayiq/real-devops-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
