k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-devops-svc
spec:
  type: NodePort
  selector:
    app: real-devops
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
